sam-internal/k8s-out/prd/prd-samtest/istio-sidecar-istio-core-sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: istio-core-sidecar
  namespace: app
spec:
  egress:
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - '*/*'
    port:
      name: grpc-egress
      number: 7443
      protocol: GRPC
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - '*/*'
    port:
      name: grpc-egress2
      number: 7012
      protocol: GRPC
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - '*/*'
    port:
      name: https-egress
      number: 7442
      protocol: HTTPS
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - '*/*'
    port:
      name: http-egress
      number: 7014
      protocol: HTTP
  ingress:
  - captureMode: NONE
    defaultEndpoint: 127.0.0.1:7021
    port:
      name: grpc-core
      number: 7443
      protocol: GRPC
